<resources>
    <string name="app_name">Tolong!</string>
    <string name="ambulance">Ambulance</string>
    <string name="police">Police</string>
    <string name="firefighter">Firefighter</string>
    <string name="ambulance_call">Ambulance Call</string>
    <string name="police_call">Police Call</string>
    <string name="firefighter_call">Firefighter Call</string>
    <string name="menu_first_aid">First Aid</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_profile">Profile</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="link_register">Belum memiliki akun? Register disini.</string>
    <string name="link_login">Sudah memiliki akun? Login disini.</string>
    <string name="register">Register</string>
    <string name="name">Nama</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ambulance_call_confirm">Apakah anda ingin memanggil Ambulance?</string>
    <string name="police_call_confirm">Apakah anda ingin memanggil Police?</string>
    <string name="firefighter_call_confirm">Apakah anda ingin memanggil Firefighter?</string>
    <string name="ya">Ya</string>
    <string name="no">Tidak</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="gallery_image">Gallery Image</string>
    <string name="tipe_luka">Tipe Luka</string>
    <string name="result">Result</string>
    <string name="dummy">Tolong! adalah aplikasi darurat perjalanan di lingkup domestik Indonesia. Aplikasi Tolong! akan siap siaga membantu Anda ketika terjadi kecelakaan yang tidak diinginkan. Tolong! akan memberikan lokasi ambulance, pemadam kebarakan, dan polisi terdekat dari lokasi Anda. Keunggulan dari aplikasi ini adalah, Anda bisa mengambil gambar jika terjadi luka pada kulit anda. Tolong! dapat memberitahu tipe luka seperti apa dan bagaimana cara menanggulanginya dengan baik serta mengikuti prosedur sebagaimana seharusnya dari rumah sakit selagi menunggu bantuan profesional datang. Aplikasi ini akan memberikan kemudahan untuk memberikan bantuan dalam keadaan darurat Anda.</string>
    <string name="penanggulangan">Penanggulangan</string>
    <string name="lokasi">Lokasi Anda</string>
    <string name="profile_image">Profile Image</string>
    <string name="alamat">Alamat</string>
    <string name="nohp">Nomor Hp</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Simpan</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="language">Bahasa</string>
    <string name="logout">Logout</string>
    <string name="small_password">Teks harus berjumlah minimal 8 digit</string>
    <string name="gambar">Gambar Luka</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_address">Jl. Mayor Rusdi 2 No.2981</string>
    <string name="dummy_nohp">0893183930</string>
    <string name="click">Klik untuk menelfon</string>
    <string name="detail_password">Kosongkan password jika ingin menggunakan password yang sama</string>
    <string name="emergency">Emergency</string>
    <string name="gambar_kejadian">Gambar kejadian</string>
    <string name="deteksi">Hasil Deteksi</string>
</resources>