<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/menu_home"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/first_aid"
        android:title="@string/menu_first_aid"
        android:icon="@drawable/baseline_medical_services_24"/>
    <item
        android:id="@+id/nearby"
        android:title="@string/menu_nearby"
        android:icon="@drawable/baseline_location_on_24"/>
    <item
        android:id="@+id/profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/baseline_person_24"/>
    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/baseline_settings_24"/>
</menu>