<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.firstaid.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </androidx.camera.view.PreviewView>

    <ImageView
        android:id="@+id/captureImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/capture_image"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_circle_24" />

    <ImageView
        android:id="@+id/switchCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/switch_camera"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/baseline_switch_camera_24" />

    <ImageView
        android:id="@+id/btn_gallery"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/gallery_image"
        app:srcCompat="@drawable/baseline_image_24"
        app:layout_constraintStart_toStartOf="@+id/viewFinder"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>