<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.call.emergency.EmergencyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_first_aid"
                android:text="@string/emergency"
                android:fontFamily="@font/gothicextrabold"
                android:textColor="@color/yellow"
                android:textSize="37sp"
                android:layout_marginTop="70dp"
                android:shadowColor="@color/black"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_gambar_luka"
                android:text="@string/gambar_kejadian"
                android:fontFamily="@font/gothicmedium"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textAlignment="center"
                android:layout_margin="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_first_aid"/>
            <ImageView
                android:id="@+id/iv_gambar_kejadian"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/gambar_kejadian"
                android:scaleType="centerCrop"
                android:layout_marginTop="15dp"
                android:transitionName="story_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_gambar_luka"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_deteksi"
                android:text="@string/deteksi"
                android:fontFamily="@font/gothicmedium"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textAlignment="center"
                android:layout_margin="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_gambar_kejadian"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_result_deteksi"
                android:text="@string/result"
                android:fontFamily="@font/gothicregular"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:paddingStart="30dp"
                android:paddingBottom="50dp"
                android:paddingEnd="30dp"
                android:lineHeight="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_deteksi"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>